<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorWhite"
        android:divider="@drawable/divider_grey"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isScrollContainer="false"
                android:orientation="horizontal">

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/customTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Order ID: "
                    android:textSize="12sp" />

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/orderid_tv_myorders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MCCOP11223344"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    app:font_name="Gothambook" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/customTextView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date: "
                    android:textSize="12sp" />

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/date_myorders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    app:font_name="Gothambook" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <com.yellowsoft.newproject.SquareImageView
                android:id="@+id/order_img"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:scaleType="fitXY"
                android:src="@drawable/product1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/producttitle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="My Cop GPS Tracker"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.yellowsoft.newproject.CustomTextView
                        android:id="@+id/customTextView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Qty: "
                        android:textSize="12sp" />

                    <com.yellowsoft.newproject.CustomTextView
                        android:id="@+id/quantity_tv_myorders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.yellowsoft.newproject.CustomTextView
                        android:id="@+id/customTextView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rupee_symbol"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <com.yellowsoft.newproject.CustomTextView
                        android:id="@+id/price_tv_myorders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="4,000"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/customTextView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_title"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/address_myorders_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="com.yellowsoft.newproject.CustomTextView"
                    android:textSize="9sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isScrollContainer="false"
                android:orientation="horizontal">

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/customTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Order Status: "
                    android:textSize="10sp" />

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/ordersstatus_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delivered"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    app:font_name="Gothambook" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/customTextView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Track order: "
                    android:textSize="10sp" />

                <com.yellowsoft.newproject.CustomTextView
                    android:id="@+id/trackinglink_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trackinglink"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    app:font_name="Gothambook" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>